--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -949,6 +949,34 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>@string/toggle_user</item>
+        <item>@string/toggle_favorite_contact</item>
+        <item>@string/toggle_battery</item>
+        <item>@string/toggle_memory</item>
+        <item>@string/toggle_clock</item>
+        <item>@string/toggle_settings</item>
+        <item>@string/toggle_signal</item>
+        <item>@string/toggle_2g</item>
+        <item>@string/toggle_lte</item>
+        <item>@string/toggle_wifi</item>
+        <item>@string/toggle_bluetooth</item>
+        <item>@string/toggle_nfc</item>
+        <item>@string/toggle_airplane_mode</item>
+        <item>@string/toggle_brightness</item>
+        <item>@string/toggle_gps</item>
+        <item>@string/toggle_auto_rotate</item>
+        <item>@string/toggle_silent</item>
+        <item>@string/toggle_vibrate</item>
+        <item>@string/toggle_sync</item>
+        <item>@string/toggle_fcharge</item>
+        <item>@string/toggle_torch</item>
+        <item>@string/toggle_wifi_ap</item>
+        <item>@string/toggle_usb_tether</item>
+        <item>@string/toggle_rebootmenu</item>
+        <item>@string/toggle_quickrecord</item>
+        <item>@string/toggle_pie</item>
+        <item>@string/toggle_expanded_desktop</item>
+        <item>@string/toggle_ime</item>
     </string-array>
 
     <!--- Sms security limit -->
