--- a/res/layout/logo_row.xml
+++ b/res/layout/logo_row.xml
@@ -21,5 +21,5 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/xenon"/>
+            android:src="@drawable/insomnia"/>
 </LinearLayout> 
