--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -18,22 +18,9 @@
         android:title="@string/about_settings">
 
 
-		<PreferenceScreen android:key="xenon_logo"
+		<PreferenceScreen android:key="insomnia_logo"
 			android:layout="@layout/logo_row" />
 
-	<PreferenceScreen android:key="additional_system_update_settings"
-            android:title="@string/system_update_settings_list_item_title">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.otaupdater"
-                    android:targetClass="com.otaupdater.OTAUpdaterActivity" />
-        </PreferenceScreen>
-
-       <PreferenceScreen android:key="rominfo_settings"
-            android:title="@string/rominfo_settings_list_item_title">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="android.romstats"
-                    android:targetClass="android.romstats.AnonymousStats" />
-        </PreferenceScreen>
 
 
         <!-- Device status - launches activity -->
